--- a/index.html
+++ b/index.html
@@ -48,4 +48,7 @@
     <button id="start">start</button>
     <script src="./src/index.js"></script>
   </body>
+  <!--<footer>
+    <h6>Image by catalyststuff on Freepik</h6>
+  </footer>-->
 </html>
